2005-02-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gstreamer/0.8.9.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	  releasing core 0.8.9

2005-01-29  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/htdocs/tasks/gstreamer.xml:
	  Add some more notes on XML.

2005-01-28  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/htdocs/tasks/code.xml:
	* src/htdocs/tasks/gnome.xml:
	* src/htdocs/tasks/gstreamer.xml:
	* src/htdocs/tasks/people.xml:
	  Add some new 'simple' tasks (people asked for them).

2005-01-20  Stephane LOEUILLET  <stephane.loeuillet@tiscali.fr>

	* src/htdocs/documentation/index.xml:
	* src/htdocs/news/news.xml:
	  fix link to new licensing page

2005-01-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/documentation/Makefile.am:
	* src/htdocs/documentation/licensing.xml:
	* src/htdocs/documentation/licensingfaq.xml:
	  remove faq here and point to faq in faq.  faq off.

2005-01-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/news/news.xml:
	  releasing 0.8.7

2005-01-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gst-plugins/0.8.7.xml:
	* src/htdocs/releases/gst-plugins/Makefile.am:
	  release notes for gst-plugins 0.8.7

2004-12-27  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-ffmpeg/0.8.3.xml:
	* src/htdocs/releases/gst-ffmpeg/Makefile.am:
	  Release notes for GStreamer FFmpeg 0.8.3 "Tiny Piece of Plastic".

2004-12-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/bugs/bugs.xml:
	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gstreamer/0.8.8.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	  new core release

2004-12-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/download/fedora.xml:
	  fix up gpg verification
