@@ -1,0 +1,512 @@
+<?xml version="1.0"?>
+<?xml-stylesheet href="../releases.xsl" type="text/xsl"?>
+<release>
+  <module>gst-plugins</module>
+  <module-fancy>GStreamer Plugins</module-fancy>
+  <name>Fluded</name>
+  <version>0.8.8</version>
+
+  <intro>
+<p>
+The GStreamer team is happy to announce a new release
+in the 0.8.x stable series of the GStreamer Plugins.
+</p>
+<p>
+The 0.8.x series is a stable series aimed at end users.
+It is not API or ABI compatible with the stable 0.6.x series.
+It is, however, parallel installable with the 0.6.x series.
+</p>
+<p>
+This module contains plugins providing media encoding and decoding,
+conversion, effects, and other elements that provide actual media
+handling functionality to the core.  You need the GStreamer core module
+to make them work.  The versions do not need to match exactly, as long
+as all of them are in the 0.8.x series.
+</p>
+<p>
+The FFmpeg-based decoder element has been moved to its own module.  If you
+want support for a lot of popular video formats, you need to install this
+module along with the GStreamer Core and Plugins.  An FFmpeg-based colorspace
+element has been added to the Plugins however.
+</p>
+  </intro>
+  <features>
+    <feature>Parallel installability with 0.6.x series</feature>
+    <feature>Internationalization</feature>
+
+    <feature>Translations: af az ca cs en_GB fr hu it nb nl or sq sr sv uk vi</feature>
+
+    <feature>subtitle support</feature>
+    <feature>new element: puzzle</feature>
+    <feature>new plugin: amrnb</feature>
+    <feature>new element: dvdlpcmdec</feature>
+    <feature>new plugin: autodetect</feature>
+  </features>
+
+  <applications>
+<p>
+The GConf settings have moved to a versioned location and can now be found
+under /system/gstreamer/0.8.  Applications should use the gconf library,
+as provided by gstreamer-gconf-0.8.pc, to access the default settings.
+</p>
+  </applications>
+  <contributors>
+<!--
+<person>Archana Shah</person>
+<person>Balamurali Viswanathan</person>
+<person>Brian Cameron</person>
+<person>Christian Schaller</person>
+<person>Christophe Fergeau</person>
+<person>Gora Mohanty</person>
+<person>Iain Holmes</person>
+<person>James Bowes</person>
+<person>James Morrison</person>
+<person>Johan Dahlin</person>
+<person>Kjartan Maraas</person>
+<person>Luca Ferretti</person>
+<person>Martin Pitt</person>
+<person>Martin Soto</person>
+<person>Milosz Derezynski</person>
+<person>Nathan Robertson</person>
+<person>Phil Blundell</person>
+<person>Scott Wheeler</person>
+<person>Stefan Kost</person>
+<person>Takao Fujiwara</person>
+<person>Toni Willberg</person>
+<person>Wim Taymans</person>
+<person>Zaheer Abbas Merali</person>
+-->
+
+	<person>Amaury Jacquot</person>
+	<person>Andy Wingo</person>
+	<person>Arwed v. Merkatz</person>
+	<person>Benjamin Otte</person>
+	<person>Clytie Siddall</person>
+	<person>David Moore</person>
+	<person>David Schleef</person>
+	<person>Edward Hervey</person>
+	<person>Francis Labonte</person>
+	<person>Gergely Nagy</person>
+	<person>James Henstridge</person>
+	<person>Jan Schmidt</person>
+	<person>Jeffrey Ollie</person>
+	<person>Julien Moutte</person>
+	<person>Koop Mast</person>
+	<person>Luca Ognibene</person>
+	<person>Maciej Katafiasz</person>
+	<person>Martin Eikermann</person>
+	<person>Martin Holters</person>
+	<person>Paul Jack</person>
+	<person>Ronald Bultje</person>
+	<person>Sebastien Cote</person>
+	<person>Stephane Loeuillet</person>
+	<person>Steve Baker</person>
+	<person>Thomas Vander Stichele</person>
+	<person>Tim-Philipp Müller</person>
+  </contributors>
+
+<!--
+  <api>
+    <additions>
+    </additions>
+    <depreciations>
+    </depreciations>
+  </api>
+-->
+
+  <bugs>
+    <bug>
+      <id>100931</id>
+      <summary>[PATCH] subtitles</summary>
+    </bug>
+    <bug>
+      <id>132341</id>
+      <summary>[avidemux] 'DIB ' = &gt; image upside-down</summary>
+    </bug>
+    <bug>
+      <id>135778</id>
+      <summary>[int2float] broken with audioconvert</summary>
+    </bug>
+    <bug>
+      <id>138666</id>
+      <summary>[playbin] cannot handle files with large initial delay in...</summary>
+    </bug>
+    <bug>
+      <id>139749</id>
+      <summary>[gstplay] libgstplay is *WAY* too slow</summary>
+    </bug>
+    <bug>
+      <id>140141</id>
+      <summary>[qtdemux] cannot playback gsm audio</summary>
+    </bug>
+    <bug>
+      <id>140845</id>
+      <summary>[strings] gst-plugins testsuite's embed.c still uses xvid...</summary>
+    </bug>
+    <bug>
+      <id>142272</id>
+      <summary>[PATCH] [qtdemux] doesn't work with sources that cannot seek</summary>
+    </bug>
+    <bug>
+      <id>143555</id>
+      <summary>[qtdemux] Movie fails to playback</summary>
+    </bug>
+    <bug>
+      <id>149162</id>
+      <summary>Importing m4a files in Rhythmbox leaks memory</summary>
+    </bug>
+    <bug>
+      <id>149274</id>
+      <summary>[PATCH] gst-plug mad gets id3v2 text tags in wrong encoding</summary>
+    </bug>
+    <bug>
+      <id>150284</id>
+      <summary>[matroskamux] fail to mux an MP3</summary>
+    </bug>
+    <bug>
+      <id>150576</id>
+      <summary>[v4l2src] pad v4l2src0:src returned caps that are not a r...</summary>
+    </bug>
+    <bug>
+      <id>151661</id>
+      <summary>[PATCH] [mad] Possible bug in mad plugin</summary>
+    </bug>
+    <bug>
+      <id>152688</id>
+      <summary>[PATCH[mad/typefind] doesn't support completely broken mp...</summary>
+    </bug>
+    <bug>
+      <id>153434</id>
+      <summary>[PATCH] faac filter cannot create .aac files</summary>
+    </bug>
+    <bug>
+      <id>154000</id>
+      <summary>Relocation error on Linux PowerPC causing crash</summary>
+    </bug>
+    <bug>
+      <id>154064</id>
+      <summary>[mad] cant mix two mp3</summary>
+    </bug>
+    <bug>
+      <id>155163</id>
+      <summary>[qtdemux] don't know audio FOURCC samr (from mobiles/3GPP...</summary>
+    </bug>
+    <bug>
+      <id>155346</id>
+      <summary>[build] faad plugin doesn't compile against 2.0-rc3</summary>
+    </bug>
+    <bug>
+      <id>155575</id>
+      <summary>[alsasink] broken with hw:X or when used with either alsa...</summary>
+    </bug>
+    <bug>
+      <id>156001</id>
+      <summary>[mpeg] problem playing an mpeg file</summary>
+    </bug>
+    <bug>
+      <id>156379</id>
+      <summary>[ffmpegcolorspace] lack of YV12 capability</summary>
+    </bug>
+    <bug>
+      <id>159092</id>
+      <summary>thx.vob file seeker moves 'faster' than the actual movie</summary>
+    </bug>
+    <bug>
+      <id>159295</id>
+      <summary>[mikmod/modplug] amiga.mod file segfault totem</summary>
+    </bug>
+    <bug>
+      <id>159327</id>
+      <summary>[mpeg/dvd] playing thx.vob seeking is broken</summary>
+    </bug>
+    <bug>
+      <id>159970</id>
+      <summary>[typefinding] mpeg/audio typefind abort with musepack file</summary>
+    </bug>
+    <bug>
+      <id>160126</id>
+      <summary>multi.ogg is slow</summary>
+    </bug>
+    <bug>
+      <id>160505</id>
+      <summary>[adder] problem using adder plugin</summary>
+    </bug>
+    <bug>
+      <id>160730</id>
+      <summary>[PATCH] [mpegdemux] should remove pads on &quot; new-media &quot; event</summary>
+    </bug>
+    <bug>
+      <id>160957</id>
+      <summary>[adder] EOSs when the first stream EOSs</summary>
+    </bug>
+    <bug>
+      <id>161179</id>
+      <summary>[audioscale] quits with gmem assertion</summary>
+    </bug>
+    <bug>
+      <id>161191</id>
+      <summary>MP3 crashes rhythmbox</summary>
+    </bug>
+    <bug>
+      <id>161262</id>
+      <summary>[mpegdemux] cannot play a pes mpeg file</summary>
+    </bug>
+    <bug>
+      <id>161325</id>
+      <summary>[dvdnavsrc] gst-dvd example pipeline not linking (a52dec ...</summary>
+    </bug>
+    <bug>
+      <id>161667</id>
+      <summary>[PATCH][snapshot] seg fault in signal handler</summary>
+    </bug>
+    <bug>
+      <id>161675</id>
+      <summary>[ffmpegcolorspace] conversion of RGB depth=15 is wrong</summary>
+    </bug>
+    <bug>
+      <id>161726</id>
+      <summary>[ffmpegcolorspace] does not handle x-raw-rgb 24/32 BE _RGB</summary>
+    </bug>
+    <bug>
+      <id>161929</id>
+      <summary>[PATCH] [mpegdemux] sends no discont events on new pads</summary>
+    </bug>
+    <bug>
+      <id>162330</id>
+      <summary>[rtpgsmenc] gsmenc ! rtpgsmenc gives assertion `GST_PAD_D...</summary>
+    </bug>
+    <bug>
+      <id>162504</id>
+      <summary>[xvimagesink] goes black when going from playing - &gt; ready...</summary>
+    </bug>
+    <bug>
+      <id>162626</id>
+      <summary>[videoscale] cannot handle lists of fractions</summary>
+    </bug>
+    <bug>
+      <id>162656</id>
+      <summary>[qtdemux] extracting more metadata from AAC/M4A</summary>
+    </bug>
+    <bug>
+      <id>162974</id>
+      <summary>[flacenc] Flac encoding is broken</summary>
+    </bug>
+    <bug>
+      <id>163159</id>
+      <summary>[videobox] plugin segfault (gst-plugin 0.8.7)</summary>
+    </bug>
+    <bug>
+      <id>163161</id>
+      <summary>[pngenc] only supports video/x-raw-rgb,bits=24,depth=24</summary>
+    </bug>
+    <bug>
+      <id>163177</id>
+      <summary>[pngdec] Can't cope with png's without an alpha channel</summary>
+    </bug>
+    <bug>
+      <id>163309</id>
+      <summary>[PATCH] typefinding for formats used by libsndfile</summary>
+    </bug>
+    <bug>
+      <id>163323</id>
+      <summary>[pngenc] compression-level customisation support</summary>
+    </bug>
+    <bug>
+      <id>163348</id>
+      <summary>[pngenc] Leaks and other nasty stuff</summary>
+    </bug>
+    <bug>
+      <id>163449</id>
+      <summary>Stereo-to-Surround doesn't like seek</summary>
+    </bug>
+    <bug>
+      <id>163485</id>
+      <summary>[PATCH] tta plugin doesn't build with gcc 2.95.4.</summary>
+    </bug>
+    <bug>
+      <id>163634</id>
+      <summary>[playbin] doesn't like # in filenames</summary>
+    </bug>
+    <bug>
+      <id>163676</id>
+      <summary>[PATCH] [mpeg2dec] need to crop</summary>
+    </bug>
+    <bug>
+      <id>163867</id>
+      <summary>[mad] Totem could not play 384kbit lame 'free format' mp3...</summary>
+    </bug>
+    <bug>
+      <id>163891</id>
+      <summary>Gst-launch-ext will not play an MPEG video</summary>
+    </bug>
+    <bug>
+      <id>164069</id>
+      <summary>[clocking] Hang when playing audio file (.wav) with visua...</summary>
+    </bug>
+    <bug>
+      <id>164197</id>
+      <summary>[pngdec] &amp; [pngenc] The decoded image is in RGB(LE) byte ...</summary>
+    </bug>
+    <bug>
+      <id>164209</id>
+      <summary>[ffmpegcolorspace] PIX_FMT_BGRA32 - &gt; caps conversion is w...</summary>
+    </bug>
+    <bug>
+      <id>164265</id>
+      <summary>[PATCH][ffmpegcolorspace] Converting from an RGB image wi...</summary>
+    </bug>
+    <bug>
+      <id>164708</id>
+      <summary>[PATCH] EffectTV/Quark freed data in wrong place</summary>
+    </bug>
+    <bug>
+      <id>164826</id>
+      <summary>[patch] Avidemux doesn't handle seek on audiopads</summary>
+    </bug>
+    <bug>
+      <id>165013</id>
+      <summary>AVI with HuffYUV segfault</summary>
+    </bug>
+    <bug>
+      <id>165193</id>
+      <summary>Patch for ov51x v4ljpegsrc</summary>
+    </bug>
+    <bug>
+      <id>165290</id>
+      <summary>cannot play asf file with just wma version 2 audio</summary>
+    </bug>
+    <bug>
+      <id>165335</id>
+      <summary>[PATCH] GstAudioScale outgoing buffers don't have duratio...</summary>
+    </bug>
+    <bug>
+      <id>165340</id>
+      <summary>gst-launch-ext-0.8 fails to display video of an .avi file.</summary>
+    </bug>
+    <bug>
+      <id>165446</id>
+      <summary>musepack gst-plugin doesn't work with new libmusepack</summary>
+    </bug>
+    <bug>
+      <id>165509</id>
+      <summary>Mod playback still broken with mikmod</summary>
+    </bug>
+    <bug>
+      <id>165525</id>
+      <summary>Problem with mplex plugin</summary>
+    </bug>
+    <bug>
+      <id>165545</id>
+      <summary>Totem won't play low bitrate mp3</summary>
+    </bug>
+    <bug>
+      <id>165736</id>
+      <summary>[alphacolor] BGRA handling is missing</summary>
+    </bug>
+    <bug>
+      <id>166207</id>
+      <summary>[PATCH] [ffmpegcolorspace] AYUV- &gt; RGB is broken</summary>
+    </bug>
+    <bug>
+      <id>166208</id>
+      <summary>[cdparanoia] returns wrong number of tracks</summary>
+    </bug>
+    <bug>
+      <id>166600</id>
+      <summary>law encoder/decoder are leaking caps</summary>
+    </bug>
+    <bug>
+      <id>166892</id>
+      <summary>gnome-volume-control crashed</summary>
+    </bug>
+    <bug>
+      <id>166917</id>
+      <summary>deadlock in queue</summary>
+    </bug>
+    <bug>
+      <id>166931</id>
+      <summary>MP3 webradio do not work in Totem</summary>
+    </bug>
+    <bug>
+      <id>167117</id>
+      <summary>[dvdnavsrc] could use a better error message when DVD not...</summary>
+    </bug>
+    <bug>
+      <id>167482</id>
+      <summary>[PATCH] [avidemux] Compile fix for gcc 2.95</summary>
+    </bug>
+    <bug>
+      <id>167483</id>
+      <summary>[PATCH] [tcpclientsrc] FreeBSD compile fix</summary>
+    </bug>
+    <bug>
+      <id>167509</id>
+      <summary>[PATCH] [tcpserversrc] Assumes a blocking socket</summary>
+    </bug>
+    <bug>
+      <id>167633</id>
+      <summary>[wavparse] div by 0 = &gt; crash</summary>
+    </bug>
+    <bug>
+      <id>167639</id>
+      <summary>Support MusicBrainz metadata tags</summary>
+    </bug>
+    <bug>
+      <id>167704</id>
+      <summary>[PATCH] [tcpserversink] Don't depend on uninitialised values</summary>
+    </bug>
+    <bug>
+      <id>167878</id>
+      <summary>[buffer-frames-convert] buffer_frames_convert_link leaks ...</summary>
+    </bug>
+    <bug>
+      <id>167959</id>
+      <summary>Dirac plugins doesn't build.</summary>
+    </bug>
+    <bug>
+      <id>168002</id>
+      <summary>[build] Musepack header files not found</summary>
+    </bug>
+    <bug>
+      <id>168133</id>
+      <summary>[PATCH] [jpegenc] Memory leaks</summary>
+    </bug>
+    <bug>
+      <id>168134</id>
+      <summary>[PATCH] [gdkpixbufscale] Memory leak</summary>
+    </bug>
+    <bug>
+      <id>168254</id>
+      <summary>[PATCH] [jpegdec] Memory leaks</summary>
+    </bug>
+    <bug>
+      <id>168260</id>
+      <summary>[PATCH] [tcpserversink] free some memory</summary>
+    </bug>
+    <bug>
+      <id>168269</id>
+      <summary>[PATCH] [smoothwave] C99-ism</summary>
+    </bug>
+    <bug>
+      <id>168271</id>
+      <summary>[PATCH] [gdkpixbufscale] Memory/CPU leak</summary>
+    </bug>
+    <bug>
+      <id>168801</id>
+      <summary>autoaudio/videosink probe only in READY</summary>
+    </bug>
+    <bug>
+      <id>168885</id>
+      <summary>AMD64 build failure in gst/librfb/rfbdecoder.c</summary>
+    </bug>
+    <bug>
+      <id>168994</id>
+      <summary>cdparanoia plugin problem with CDs whose first track does...</summary>
+    </bug>
+    <bug>
+      <id>169146</id>
+      <summary>gst-plugins 0.8.9 building on gcc 2.95.3</summary>
+    </bug>
+  </bugs>
+
+</release>
