@@ -1,3 +1,9 @@
+2005-03-07  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* src/htdocs/releases/gst-plugins/0.8.8.xml:
+	* src/htdocs/releases/gst-plugins/Makefile.am:
+	  new plugins release notes
+
 2005-02-08  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* src/htdocs/entities.gst:
